update to jekyll

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,62 @@
 
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
+	<link rel="icon" href="img/logos.png" type="image/png">
+    <link rel="shortcut icon" href="img/logos.png" type="image/png">
+
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
+
+    <link href="{{"/css/bootstrap.css" | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
+    <link href="{{"/css/font-awesome.css" | prepend: site.baseurl}}" rel="stylesheet" type="text/css">
+    <link href="{{"/css/responsive.css" | prepend: site.baseurl}}" rel="stylesheet" type="text/css">
+    <link href="{{"/css/animate.css" | prepend: site.baseurl}}" rel="stylesheet" type="text/css">
+
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+
+	<!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
+
+    <script type="text/javascript" src="{{ "/js/jquery.1.8.3.min.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/jquery-scrolltofixed.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/jquery.easing.1.3.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/jquery.isotope.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/wow.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/classie.js" | prepend: site.baseurl }}"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js'></script>
+
+    <!-- <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-105061788-1', 'auto');
+        ga('send', 'pageview');
+    </script> -->
+
+    <!-- <script>
+        (function(d, w, c) {
+            w.ChatraID = 'ucJ8LELtXHGiSoENn';
+            var s = d.createElement('script');
+            w[c] = w[c] || function() {
+                (w[c].q = w[c].q || []).push(arguments);
+            };
+            s.async = true;
+            s.src = (d.location.protocol === 'https:' ? 'https:' : 'http:') +
+                '//call.chatra.io/chatra.js';
+            if (d.head) d.head.appendChild(s);
+        })(document, window, 'Chatra');
+    </script> -->
 
 </head> 
