--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,53 @@
-<aside>
-	<div class="container">
-		<nav>
-			<ul>
-				{% for page in site.pages %} {% if page.title %}
-				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-				{% endif %} {% endfor %}
-				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
-			</ul>
-			</li>
-			</ul>
-		</nav>
-	</div>
-</aside>
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#">Blog CB Media</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<header>
-	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+		{% for page in site.pages %} {% if page.title %}
+		<li class="nav-item">
+			<a class="nav-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+		</li>
+		{% endif %} {% endfor %}
+		<li class="nav-item">
+			<a class="nav-link" href="{{ "/blog" | prepend: site.baseurl }}">Blog</a>
+		</li>
+    </ul>
+  </div>
+</nav> -->
+
+<header class="header" id="header">
+    <!--header-start-->
+    <div class="container">
+        <figure class="logo animated fadeInDown delay-07s">
+            <a href="javascript:void(0);"><img src="img/logos.png" alt=""></a>
+        </figure>
+        <h1 class="animated fadeInDown delay-07s">Welcome To CB Media Studios</h1>
+        <ul class="we-create animated fadeInUp delay-1s">
+            <li>We are a digital agency that loves <br> crafting beautiful websites and application developer.</li>
+        </ul>
+        <a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
+    </div>
 </header>
- 
+<!--header-end-->
+
+<nav class="main-nav-outer" id="test">
+    <!--main-nav-start-->
+    <div class="container">
+        <ul class="main-nav">
+            <li><a href="#header">Home</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#Portfolio">Portfolio</a></li>
+            <li class="small-logo">
+                <a href="#header"><img src="img/logos.png" alt="" width="70" height="50"></a>
+            </li>
+            <li><a href="#client">Clients</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <a class="res-nav_click" href="javascript:void(0);"><i class="fa-bars"></i></a>
+    </div>
+</nav>
+<!--main-nav-end-->
