--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,4 +63,15 @@
         })(document, window, 'Chatra');
     </script> -->
 
+    <script>
+        (function(w, i, d, g, e, t, s) {
+            w[d] = w[d] || [];
+            t = i.createElement(g);
+            t.async = 1;
+            t.src = e;
+            s = i.getElementsByTagName(g)[0];
+            s.parentNode.insertBefore(t, s);
+        })(window, document, '_gscq', 'script', '//widgets.getsitecontrol.com/100860/script.js');
+    </script>
+
 </head> 
